# coral-posenet-imx

./: README.md  SCR.txt  download_dependencies.sh
edgetpu/: Makefile.am  autogen.sh  configure.ac
